# Pi-Tool

./: .gitignore  CODE_OF_CONDUCT.md  Dockerfile  README.md  install.sh  package.json  pi-tool-daemon.service  shell.nix  tsconfig.json
.github/workflows/: main.yml
daemon/: Cargo.toml  README.md
daemon/src/: actions.rs  command_handler.rs  main.rs  mapping.rs  metrics.rs  overclock.rs  util.rs  watchers.rs
public/: electron.js  index.html
src/: DragButtonAction.tsx  GridContext.tsx  index.css  index.tsx  websocket.ts
src/actions/: index.ts
src/components/: AddButtonMappingDialog.tsx  ButtonMappingCard.tsx  ButtonPressIcon.tsx  MainCard.tsx  MetricChart.tsx  MetricChart.tsx_old  MonitoringCard.tsx  MonitoringDialog.tsx  OverclockingCard.tsx  OverclockingDialog.tsx
src/components/App/: App.css  App.tsx
src/models/: index.ts
src/reducers/: buttonMaps.ts  index.ts  monitoring.ts  overclock.ts
src/types/: actions.ts
src/util/: actions.ts  monitoring.ts  overclock.ts
