[package]
name = "pi-tool-daemon"
version = "0.1.0"
authors = ["Niklas Kunz <git@monoton.space>"]
edition = "2018"

[dependencies]
tungstenite = "0.11.1"
tokio-tungstenite = "*"
tokio = { version = "0.2", features = ["full"] }
futures-util = "0.3.5"
futures = "0.3.5"
log = "0.4.11"
simplelog = "0.8.0"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
crossbeam = "0.7.3"
lazy_static = "1.4.0"
sysfs_gpio = "0.5.4"
sysinfo = "0.15.1"

[features]
raspberry = []
